# kitcube-tools

./: .gitignore  3m_8cpp.html  3m_8h.html  3m_8h_source.html  CC2_8py.html  ChangeLog  Makefile.am  README  TODO  akinifile_8cpp.html  akinifile_8h.html  akinifile_8h_source.html  aksingleton_8cpp.html  aksingleton_8h.html  aksingleton_8h_source.html  aksingletoncleaner_8cpp.html  aksingletoncleaner_8h.html  aksingletoncleaner_8h_source.html  aksingletontest_8cpp.html  aksingletontest_8h.html  aksingletontest_8h_source.html  aktimelib_8cpp.html  aktimelib_8h.html  aktimelib_8h_source.html  akutil_8h.html  akutil_8h_source.html  analyseNoise_8cpp.html  analyseNoise_8h.html  analyseNoise_8h_source.html  analysePulse_8cpp.html  analysePulse_8h.html  analysePulse_8h_source.html  analysematrix_8cpp.html  analysematrix_8h.html  analysematrix_8h_source.html  annotated.html  baseserver_8cpp.html  baseserver_8h.html  baseserver_8h_source.html  bsddate_8cpp.html  (+363 more)
docs/: Doxyfile  README.md
docs/html/: 3m_8cpp.html  3m_8h.html  3m_8h_source.html  CC2_8py.html  akinifile_8cpp.html  akinifile_8h.html  akinifile_8h_source.html  aksingleton_8cpp.html  aksingleton_8h.html  aksingleton_8h_source.html  aksingletoncleaner_8cpp.html  aksingletoncleaner_8h.html  aksingletoncleaner_8h_source.html  aksingletontest_8cpp.html  aksingletontest_8h.html  aksingletontest_8h_source.html  aktimelib_8cpp.html  aktimelib_8h.html  aktimelib_8h_source.html  akutil_8h.html  akutil_8h_source.html  analyseNoise_8cpp.html  analyseNoise_8h.html  analyseNoise_8h_source.html  analysePulse_8cpp.html  analysePulse_8h.html  analysePulse_8h_source.html  analysematrix_8cpp.html  analysematrix_8h.html  analysematrix_8h_source.html  annotated.html  baseserver_8cpp.html  baseserver_8h.html  baseserver_8h_source.html  bsddate_8cpp.html  campbelltoa5_8cpp.html  campbelltoa5_8h.html  campbelltoa5_8h_source.html  campbelltob1_8cpp.html  campbelltob1_8h.html  (+354 more)
docs/latex/: 3m_8cpp.tex  3m_8h.tex  CC2_8py.tex  akinifile_8cpp.tex  akinifile_8h.tex  aksingleton_8cpp.tex  aksingleton_8h.tex  aksingletoncleaner_8cpp.tex  aksingletoncleaner_8h.tex  aksingletontest_8cpp.tex  aksingletontest_8h.tex  aktimelib_8cpp.tex  aktimelib_8h.tex  akutil_8h.tex  analyseNoise_8cpp.tex  analyseNoise_8h.tex  analysePulse_8cpp.tex  analysePulse_8h.tex  analysematrix_8cpp.tex  annotated.tex  (+213 more)
etc/: 20090625.chm.sensors  3M.data.sensors  3M.gps.sensors  3M.sonic.sensors  3M1.data.sensors  3M2.sonic.sensors  3M3.data.sensors  3M3.gps.sensors  3M4.data.sensors  3M4.gps.sensors  3M4.sonic.sensors  BD_EB1_flux.sensors  BD_EB_flux.sensors  BD_MET_rainwind.sensors  BD_MET_slow.sensors  Ceilometer.chm.sensors  EB1.DAL.sensors  EB1.DAR.sensors  EB1.DAS.sensors  EB1.DAX.sensors  EB2.DAL.sensors  EB2.DAR.sensors  EB2.DAS.sensors  EB2.DAX.sensors  EB3.ts_data.sensors  EBM_DAR.sensors  EBM_DAS1.sensors  EBM_DAS2.sensors  EBM_DAS3.sensors  EBM_DAX.sensors  EventLoop.sql  FDPerfMonitor.sql  Generic.A05.sensors  Generic.std.sensors  Lara.run.sensors  Lara.stab.sensors  M01_01.DAR.sensors  M01_01.DAS.sensors  M01_01.DAX.sensors  Makefile.am  (+101 more)
etc/rsync/: Makefile.am  backup-include  cc-append-filter  crontab  eb1-append-filter-sm  eb2-append-filter-sm  mast-append-filter  radiometrics-append-filter  rpg-append-filter  sci-append-filter  sod-append-filter  sod-sync-filter  update-master.txt  wc-append-filter  wtx-append-filter
kitcube-status/: .htaccess  README  adeiconfig.py  getadeicc.cgi  getadeici.cgi  getadeidata.cgi  getadeifile.cgi  getadeilegend.cgi  getadeiplot.cgi  getadeirs.cgi  getadeistatus.cgi  getadeistatuspush.cgi  getadeixr.cgi  kitcube-status.html
kitcube-status-0.1/: .htaccess  README  kitcube.css  kitcube.php
php/: kitcube.js  module-list.tiff  parse-ascii.php
releases/: Makefile.am  README.txt
search/: all_61.js  all_67.js  all_6e.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_77.js  classes_67.js  classes_69.js  classes_6d.js  classes_6f.js  classes_72.js  classes_77.js  defines_62.js  defines_63.js  enums_72.js  files_63.js  files_64.js  files_6a.js  files_70.js  functions_62.js  functions_64.js  functions_67.js  functions_69.js  functions_72.js  functions_75.js  functions_7e.js  namespaces_63.js  pages_68.js  pages_72.js  variables_64.js  variables_67.js  variables_68.js  variables_6d.js  variables_71.js  variables_72.js  variables_76.js  variables_7a.js
src/: Makefile.am  akutil  fdhwlib.h
src/akutil/: .#baseserver.cpp.1.23  .#baseserver.cpp.1.24  .#simpleserver.cpp.1.17  .#simpleserver.cpp.1.18  .#simpleserver.cpp.1.19  .#wgcommand.cpp.1.4  Makefile.am  Readme.txt  akinifile.cpp  akinifile.h  aksingleton.cpp  aksingleton.h  aksingletoncleaner.cpp  aksingletoncleaner.h  aksingletontest.cpp  aksingletontest.h  aktimelib.cpp  aktimelib.h  aktimelib.ini  akutil.dsp  akutil.h  akutil.mak  akutil.vcproj  analyseNoise.cpp  analyseNoise.h  analysePulse.cpp  analysePulse.h  analysematrix.cpp  analysematrix.h  inifile.cpp  keyboard.h  procDuration.cpp  procDuration.h  semaphore.cpp  semaphore.h  sharedMemory.cpp  sharedMemory.h  simpleserver.cpp  simplesocket.cpp  socketserver.cpp  (+7 more)
src/akutil.minimal/: Makefile.am  akinifile.h  baseserver.cpp  baseserver.h  inifile.h  simpleserver.h  simplesocket.h
src/akutil/CVS/: Entries  Repository  Root
src/kitcube-data/: Makefile.am  Mast-Output  dataserver.cpp  dataserver.h  katrin.ini  kitcube-Ceilometer  kitcube-data.cpp  kitcube.ini
src/kitcube-devices/: 3m.cpp  3m.h  Makefile.am  README  campbelltoa5.cpp  campbelltoa5.h  campbelltob1.cpp  campbelltob1.h  ceilometer.cpp  ceilometer.h  createdevice.cpp  createdevice.h  daqasciidevice.cpp  daqasciidevice.h  daqbinarydevice.cpp  daqbinarydevice.h  daqdevice.cpp  daqdevice.h  endian-osx.h  gps.cpp  gps.h  hatpro.cpp  hatpro.h  jwd.cpp  jwd.h  lara.cpp  lara.h  mast.cpp  mast.h  mrr.cpp  mrr.h  norbert.cpp  norbert.h  orcaprocess.cpp  orcaprocess.h  parsivel.cpp  parsivel.h  radiosonde.cpp  radiosonde.h  regenwippe.cpp  (+21 more)
src/kitcube-reader/: CC2.py  Makefile.am  kitcube-monitor.cpp  kitcube-reader.cpp  reader.cpp  reader.h  test-CC2.py
(+351 files in other folders)
