AC_INIT(configure.in)

AC_CONFIG_MACRO_DIR([m4])
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(kitcube-tools, 0.25)


AC_LANG_CPLUSPLUS
# LIBTOOL sometimes produces no binary files on OSX
#AM_PROG_LIBTOOL
AC_PROG_RANLIB

dnl
dnl Add the base include directory
dnl
CXXFLAGS="-I.. -I../../fdhwlib/src -Wall -g -O2"
CFLAGS="-I.. -I../../fdhwlib/src -Wall -g -O2"

AC_PROG_CXX

dnl
dnl Define libraries for IEEE1394
dnl Known hosts are Linux and Darwin System
dnl TODO: Check for existance of library
dnl

AM_CONDITIONAL(ARCH_LINUX, test `uname` = Linux)
AM_CONDITIONAL(ARCH_DARWIN, test `uname` = Darwin)




dnl
dnl Check MySQL support
dnl
AC_CHECK_HEADERS(mysql/mysql.h)
if test "x$ac_cv_header_mysql_mysql_h" = "xyes"; then
  MYSQL="MySQL support"
  MYSQL_LIBS="-lmysqlclient -lz"
else
  MYSQL="MySQL support  disabled"
fi
AC_SUBST(MYSQL)
AC_SUBST(MYSQL_LIBS)
AM_CONDITIONAL(USE_MYSQL, test "x$ac_cv_header_mysql_mysql_h" = "xyes")



dnl
dnl Check iconv support
dnl
AC_CHECK_HEADERS(iconv.h)
dnl if test "x$ac_cv_header_iconv_h" = "xyes"; then
dnl  ICONV_LIBS="-liconv"
dnl fi
AC_SUBST(ICONV_LIBS)
AM_CONDITIONAL(USE_ICONV, test "x$ac_cv_header_iconv_h" = "xyes")


dnl 
dnl Python support
dnl
AC_CHECK_HEADERS(Python.h)
if test "x$ac_cv_header_Python_h" = "xyes"; then
  echo "Yes python"
  PYTHON="Python support"
  USE_PYTHON_DEFINE="define USE_PYTHON"
  PYTHON_LIBS="-lpython$PYVER"
else
  PYTHON="Python support disabled"
  USE_PYTHON_DEFINE="#define USE_PYTHON"
fi
AC_SUBST(PYTHON)
AC_SUBST(PYTHON_LIBS)
AC_SUBST(USE_PYTHON_DEFINE)
AM_CONDITIONAL(USE_PYTHON, test "x$ac_cv_header_Python_h" = "xyes")



AC_OUTPUT(kitcube-tools.spec kitcube-tools.doxygen Makefile bin/Makefile etc/Makefile etc/rsync/Makefile src/Makefile src/akutil/Makefile src/kitcube-devices/Makefile src/kitcube-data/Makefile src/kitcube-reader/Makefile src/bsddate/Makefile releases/Makefile releases/ipecube/Makefile releases/hatzenbuehl/Makefile releases/corte/Makefile releases/inra/Makefile)

