# Makefile.am
#


EXTRA_DIST = kitcube.ini kitcube.ini.kitcube kitcube.ini.hatpro \
	kitcube-data.ipepdvadei kitcube-reader.ipepdvadei \
	T01.DAS.sensors T01.DAL.sensors T01.DAR.sensors T01.DAX.sensors \
	T02.DAS.sensors T02.DAL.sensors T02.DAR.sensors T02.DAX.sensors \
	T03.DAS.sensors T03.DAL.sensors T03.DAR.sensors T03.DAX.sensors \
	T04.DAS.sensors T04.DAL.sensors T04.DAR.sensors T04.DAX.sensors \
	T05.DAS.sensors T05.DAL.sensors T05.DAR.sensors T05.DAX.sensors \
	T06.DAS.sensors T06.DAL.sensors T06.DAR.sensors T06.DAX.sensors \
	T07.DAS.sensors T07.DAL.sensors T07.DAR.sensors T07.DAX.sensors \
	EB1.DAS.sensors EB1.DAL.sensors EB1.DAR.sensors EB1.DAX.sensors \
	EB2.DAS.sensors EB2.DAL.sensors EB2.DAR.sensors EB2.DAX.sensors \
	PT20.DAL.sensors PT20.DAR.sensors \
	3M1.data.sensors data.csv.template \
	3M1.gps.sensors gps.csv.template \
	3M1.sonic.sensors sonic.csv.template \
	3M2.data.sensors 3M2.gps.sensors 3M2.sonic.sensors \
	3M3.data.sensors 3M3.gps.sensors 3M3.sonic.sensors \
	3M4.data.sensors 3M4.gps.sensors 3M4.sonic.sensors \
	scintillometer.RES.sensors 100727.RES.template \
	WTH.sensors \
	WTX.sensors \
	windcube.sta.sensors \
	gps.tro.sensors kitk16230.tro.template \
	sodar.mnd.sensors 110222.mnd.template \
	rs1.txt.sensors rs2.txt.sensors CN010211.txt.template \
	hatpro.cbh.sensors hatpro.cmp.sensors hatpro.hkd.sensors hatpro.hpc.sensors \
	hatpro.iwv.ppi.sensors hatpro.iwv.rhi.sensors hatpro.iwv.ver.sensors hatpro.iwv.vol.sensors \
	hatpro.lpr.sensors \
	hatpro.lwp.ppi.sensors hatpro.lwp.rhi.sensors hatpro.lwp.ver.sensors hatpro.lwp.vol.sensors \
	hatpro.met.sensors hatpro.sta.sensors hatpro.tpb.sensors hatpro.tpc.sensors \
	jwd.dd.sensors dd090826.template \
	jwd.rd.sensors rd090826.template \
	regenwippe.dat.sensors w20090826.dat.template \
	SimRandom.txt.sensors \
	SysLog.sensors \
	norbert.dat.sensors norbert.dat.template
