INCLUDES = $(all_includes)
libakutil_a_CXXFLAGS = -fPIC
METASOURCES = AUTO
lib_LIBRARIES = libakutil.a
libakutil_a_SOURCES = akinifile.cpp akinifile.h baseserver.cpp baseserver.h inifile.cpp	inifile.h simpleserver.h simpleserver.cpp simplesocket.h simplesocket.cpp
 
#simplesocket.cpp	
#simplesocket.h socketserver.cpp socketserver.h 


# Modify the name of the package install dir first
#pkgincludedir = $(prefix)/@PACKAGE@-@VERSION@/include/akutil
pkgincludedir = $(prefix)/include/akutil
pkginclude_HEADERS = *.h 

# Configuration files
#EXTRA_DIST = aktimelib.ini        
#sysconf_DATA = aktimelib.ini
